img have sizes to prevent shifting

--- a/css/base.css
+++ b/css/base.css
@@ -82,7 +82,7 @@ section {
     padding-top: 120px;
     padding-left: 40px;
     padding-right: 40px;
-
+    height: 100%;
 }
 
 
